[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["sshelll <shaojiale.gitignore@icloud.com>"]
description = "A simple key-value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.11.2"
log = "0.4.21"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
sled = "0.34.7"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
